# ambient-expense-agent

./: .gitignore  Makefile  README.md  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
deployment/terraform/single-project/vars/: env.tfvars
expense_agent/: __init__.py  agent.py  config.py  fast_api_app.py
scratch/: check_sessions.py  engines.json  publish_msg.py
submission_frontend/: Dockerfile  README.md  main.py  pyproject.toml
tests/eval/: eval_config.yaml  generate_traces.py  grade_traces.py
tests/integration/: test_agent.py  test_agent_runtime_app.py  test_server_e2e.py
