[project]
name = "submission-frontend"
version = "0.1.0"
description = "FastAPI Manager Dashboard for Expense Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "google-adk>=1.5.0",
    "google-cloud-aiplatform>=1.48.0",
    "jinja2>=3.1.3",
    "pydantic>=2.6.0"
]

[tool.uv]
dev-dependencies = []
